--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
         <h1>
 <a id="patalib-a-pataphysical-toolkit-for-python" class="anchor" href="#patalib-a-pataphysical-toolkit-for-python" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>PataLib a Pataphysical toolkit for Python</h1>
 
-<p>PataLib for Python is a toolkt for implementing
+<p>PataLib for Python is a toolkit for implementing
 pataphysically inspired algorithms.</p>
 
 <h2>
@@ -59,7 +59,7 @@ including Ubu Roi, Gestes et opinions du docteur Faustroll pataphysicien
 La Chandelle Verte: Lumières sur les Choses de ce Temps 
 (The Green Candle: Lights on things in this time) and César-Antéchrist (Caesar Antichrist). </p>
 
-<p>Many of the ides he and those who followed him are expressed in this tool kit
+<p>Many of the ideas he and those who followed him are expressed in this tool kit
 including:</p>
 
 <h3>
